syntax = "proto3";
package region;
import "common/common.proto";
service Region {
  rpc Ping (EmptyRequest) returns (EmptyResponse) {}
  rpc AddRegions (AddRegionsRequest) returns (EmptyResponse) {}
  rpc TransferPrimary (AddRegionsRequest) returns (EmptyResponse) {}
  rpc GetRegion (IdRegionRequest) returns (GetRegionResponse) {}
  rpc RemoveRegions (RemoveRegionsRequest) returns (EmptyResponse) {}
  rpc ClientUpdate (UpdateRegionRequest) returns (UpdateRegionResponse) {}
  rpc AddFoods (FoodRequest) returns (EmptyResponse) {}
  rpc RemoveFoods (FoodRequest) returns (EmptyResponse) {}
}
message EmptyRequest {}
message EmptyResponse {}

message AddRegionsRequest {
  repeated FoodRequest regions = 1;
}

message RemoveRegionsRequest {
  repeated IdRegionRequest regions = 1;
}

message IdRegionRequest {
  uint32 id = 1;
}

message GetRegionResponse {
  repeated common.Blob blobs = 1;
  repeated common.Food foods = 2;
  bool ready = 3;
}

message UpdateRegionRequest {
  common.Blob blob = 1;
  uint32 id = 2;
}

message UpdateRegionResponse {
  int32 deltaMass = 1;
  bool alive = 2;
  bool ready = 3;
}

message FoodRequest {
  uint32 id = 1;
  repeated common.Food foods = 2;
}


